-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b14
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8280418 | 11.0.15-oracle | Fairoz Matte | P4 | Resolved | Fixed | b04 |
| JDK-8278849 | 11.0.15 | Vladimir Kempik | P4 | Resolved | Fixed | b01 |
| JDK-8286684 | 8u351 | Fairoz Matte | P4 | Resolved | Fixed | b01 |
We have a bunch of unhandled case warnings. Let's fix them.
- backported by
-
JDK-8278849 AArch64: Warnings in C1 and template interpreter
-
- Resolved
-
-
JDK-8280418 AArch64: Warnings in C1 and template interpreter
-
- Resolved
-
-
JDK-8286684 AArch64: Warnings in C1 and template interpreter
-
- Resolved
-
- duplicates
-
JDK-8211207 AArch64: Fix build failure after JDK-8211029
-
- Closed
-
- relates to
-
JDK-8211207 AArch64: Fix build failure after JDK-8211029
-
- Closed
-
(2 links to)