8211170: AArch64: Warnings in C1 and template interpreter

Reviewed-by: adinn